--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap');
 
 :root {
@@ -161,6 +164,6 @@ button:focus-visible {
 
 @media screen and (min-width: 1024px) {
     .bmi-calculator{
-    width: 50vw !important;
+      width: 50vw !important;
     }
   }
